wandb/run-20241218_112531-hdwak4j8/files/output.log
12/18/2024 11:25:32 - INFO - __main__ - ***** Running training *****
12/18/2024 11:25:32 - INFO - __main__ -   Num examples = 1566
12/18/2024 11:25:32 - INFO - __main__ -   Num Epochs = 100
12/18/2024 11:25:32 - INFO - __main__ -   Instantaneous batch size per device = 64
12/18/2024 11:25:32 - INFO - __main__ -   Total train batch size (w. parallel, distributed & accumulation) = 64
12/18/2024 11:25:32 - INFO - __main__ -   Gradient Accumulation steps = 1
12/18/2024 11:25:32 - INFO - __main__ -   Total optimization steps = 2500
  1%|▉                                                                                                | 24/2500 [00:07<10:19,  4.00it/s]Traceback (most recent call last):
  File "/home/agrosavia/cacao-hf/main.py", line 827, in <module>
    main()
  File "/home/agrosavia/cacao-hf/main.py", line 687, in main
    specificity = evaluate.load("./specificity", module_type="metric")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agrosavia/cacao-hf/env/lib/python3.12/site-packages/evaluate/loading.py", line 751, in load
    evaluation_cls = import_main_class(evaluation_module.module_path)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agrosavia/cacao-hf/env/lib/python3.12/site-packages/evaluate/loading.py", line 76, in import_main_class
    module = importlib.import_module(module_path)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agrosavia/anaconda3/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/agrosavia/.cache/huggingface/modules/evaluate_modules/metrics/specificity/8fc6450a04b83f0fdef8389ad2dd0b476a067aa9d97ee6222d489fa79b2bb75b/specificity.py", line 15
    def _compute(self, predictions, references):
                                                ^
IndentationError: unindent does not match any outer indentation level
